# foodApp

./: CMakeLists.txt  Food.h  ProductWidget.cpp  foodApp.pro  loginpage.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerpage.cpp  registerpage.h  resources.qrc
DatabaseManager/: FileProcessing.cpp  FileProcessing.h
assets/: ProductWidget.h
assets/FoodTypes/: BurgerProps.txt  BurgerTypes.txt
assets/FoodTypes/Burger/: BurgerProps.txt  BurgerTypes.txt
assets/FoodTypes/Drink/: DrinkProps.txt  DrinkTypes.txt
assets/FoodTypes/FoodBox/: FoodBoxProps.txt  FoodBoxTypes.txt
assets/FoodTypes/Salad/: SaladProps.txt  SaladTypes.txt
assets/FoodTypes/Sauce/: SauceProps.txt  SauceTypes.txt
assets/FoodTypes/Snack/: SnackProps.txt  SnackTypes.txt
assets/FoodTypes/Soup/: SoupProps.txt  SoupTypes.txt
cfiles/: ProductWidget.cpp  adminpage.cpp  encrypt.cpp  loginpage.cpp  main.cpp  mainwindow.cpp  registerpage.cpp  types.cpp
hfiles/: ProductWidget.h  adminpage.h  checkps.h  encrypt.h  loginpage.h  mainwindow.h  registerpage.h  types.h
mainClasses/: Burger.h  Drink.h  FoodBox.h  Salad.h  Sauce.h  Snack.h  Soup.h
users/: Admin.h  User.h  hashSHA256.cpp  users.txt
